@@ -2,6 +2,8 @@ Revision history for HTML-FromANSI-Tiny
 
 {{$NEXT}}
 
+  - Add colors for 256 palette.
+
 0.103     2014-03-16T01:56:14Z
 
   - Remove many terminal escape sequences not related to color
